Add quick pick for extract to function code action