@@ -22,14 +22,26 @@ import io.ballerina.compiler.api.symbols.TypeDescKind;
 import io.ballerina.compiler.api.symbols.TypeSymbol;
 import io.ballerina.compiler.api.symbols.VariableSymbol;
 import io.ballerina.compiler.syntax.tree.AssignmentStatementNode;
+import io.ballerina.compiler.syntax.tree.BasicLiteralNode;
+import io.ballerina.compiler.syntax.tree.BinaryExpressionNode;
 import io.ballerina.compiler.syntax.tree.BracedExpressionNode;
 import io.ballerina.compiler.syntax.tree.CompoundAssignmentStatementNode;
 import io.ballerina.compiler.syntax.tree.FieldAccessExpressionNode;
+import io.ballerina.compiler.syntax.tree.FunctionCallExpressionNode;
+import io.ballerina.compiler.syntax.tree.ImplicitNewExpressionNode;
+import io.ballerina.compiler.syntax.tree.IndexedExpressionNode;
+import io.ballerina.compiler.syntax.tree.ModuleMemberDeclarationNode;
 import io.ballerina.compiler.syntax.tree.Node;
 import io.ballerina.compiler.syntax.tree.NodeVisitor;
 import io.ballerina.compiler.syntax.tree.NonTerminalNode;
 import io.ballerina.compiler.syntax.tree.SimpleNameReferenceNode;
+import io.ballerina.compiler.syntax.tree.OptionalFieldAccessExpressionNode;
+import io.ballerina.compiler.syntax.tree.QualifiedNameReferenceNode;
+import io.ballerina.compiler.syntax.tree.SimpleNameReferenceNode;
+import io.ballerina.compiler.syntax.tree.StatementNode;
 import io.ballerina.compiler.syntax.tree.SyntaxKind;
+import io.ballerina.compiler.syntax.tree.TypeCastExpressionNode;
+import io.ballerina.compiler.syntax.tree.UnaryExpressionNode;
 import io.ballerina.tools.diagnostics.Location;
 import io.ballerina.tools.text.LineRange;
 import org.apache.commons.lang3.tuple.Pair;
@@ -48,10 +60,12 @@ import org.ballerinalang.langserver.common.utils.NameUtil;
 import org.ballerinalang.langserver.common.utils.PositionUtil;
 import org.ballerinalang.langserver.common.utils.SymbolUtil;
 import org.ballerinalang.langserver.commons.CodeActionContext;
+import org.ballerinalang.langserver.commons.capability.LSClientCapabilities;
 import org.ballerinalang.langserver.commons.codeaction.spi.RangeBasedCodeActionProvider;
 import org.ballerinalang.langserver.commons.codeaction.spi.RangeBasedPositionDetails;
 import org.eclipse.lsp4j.CodeAction;
 import org.eclipse.lsp4j.CodeActionKind;
+import org.eclipse.lsp4j.Command;
 import org.eclipse.lsp4j.Position;
 import org.eclipse.lsp4j.Range;
 import org.eclipse.lsp4j.TextEdit;
@@ -353,46 +367,91 @@ public class ExtractToFunctionCodeAction implements RangeBasedCodeActionProvider
         boolean newLineAtEnd = addNewLineAtEnd(enclosingNode);
         functionInsertRange = PositionUtil.toRange(enclosingNode.lineRange().endLine());
 
-        Optional<TypeSymbol> typeSymbol = context.currentSemanticModel().get().typeOf(matchedCodeActionNode);
+        // Check if the selection is a range or a position, and whether quick picks are supported by the client
+        LSClientCapabilities lsClientCapabilities = context.languageServercontext().get(LSClientCapabilities.class);
+        if (CodeActionUtil.isRange(context.range())
+                || !lsClientCapabilities.getInitializationOptions().isQuickPickSupported()) {
 
-        if (typeSymbol.isEmpty() || typeSymbol.get().typeKind() == TypeDescKind.COMPILATION_ERROR) {
+            Optional<TypeSymbol> typeSymbol = context.currentSemanticModel().get().typeOf(matchedCodeActionNode);
+
+            if (typeSymbol.isEmpty() || typeSymbol.get().typeKind() == TypeDescKind.COMPILATION_ERROR) {
+                return Collections.emptyList();
+            }
+
+            Optional<List<Symbol>> varAndParamSymbolsWithinRange =
+                    getVarAndParamSymbolsWithinRangeForExprs(matchedCodeActionNode.lineRange(), context);
+
+            if (varAndParamSymbolsWithinRange.isEmpty()) {
+                return Collections.emptyList();
+            }
+
+            Optional<ArgListsHolder> argLists = getArgLists(context, varAndParamSymbolsWithinRange.get(), 
+                    matchedCodeActionNode);
+
+            if (argLists.isEmpty()) {
+                return Collections.emptyList();
+            }
+
+            List<String> argsForExtractFunction = argLists.get().extractFunctionArgs;
+            List<String> argsForReplaceFunctionCall = argLists.get().replaceFunctionCallArgs;
+
+            List<TextEdit> textEdits = getTextEdits(context, matchedCodeActionNode, newLineAtEnd, typeSymbol.get(),
+                    argsForExtractFunction, argsForReplaceFunctionCall, functionInsertRange);
+
+            // Selection is a range
+            CodeAction codeAction = CodeActionUtil.createCodeAction(CommandConstants.EXTRACT_TO_FUNCTION,
+                    textEdits, context.fileUri(), CodeActionKind.RefactorExtract);
+            CodeActionUtil.addRenamePopup(context, codeAction, CommandConstants.RENAME_COMMAND_TITLE_FOR_FUNCTION,
+                    textEdits.get(1).getRange().getStart());
+            return Collections.singletonList(codeAction);
+        }
+
+        ExpressionNodeValidator nodeValidator = new ExpressionNodeValidator();
+        matchedCodeActionNode.accept(nodeValidator);
+        if (nodeValidator.getInvalidNode()) {
             return Collections.emptyList();
         }
 
-        Optional<List<Symbol>> varAndParamSymbolsWithinRange =
-                getVarAndParamSymbolsWithinRangeForExprs(matchedCodeActionNode.lineRange(), context);
+        // Selection is a position
+        List<NonTerminalNode> nodeList = getPossibleExpressionNodes(matchedCodeActionNode, nodeValidator);
+        LinkedHashMap<String, List<TextEdit>> textEditMap = new LinkedHashMap<>();
+        LinkedHashMap<String, Position> renamePositionMap = new LinkedHashMap<>();
 
-        if (varAndParamSymbolsWithinRange.isEmpty()) {
-            return Collections.emptyList();
+        // List out the expression node list that we are going to provide quick pick support
+        // Find the arg list for each of the expression nodes
+
+        nodeList.forEach(extractableNode -> {
+            Optional<TypeSymbol> tSymbol = context.currentSemanticModel()
+                    .flatMap(semanticModel -> semanticModel.typeOf(extractableNode));
+            if (tSymbol.isEmpty() || tSymbol.get().typeKind() == TypeDescKind.COMPILATION_ERROR) {
+                return;
+            }
+            String key = extractableNode.toSourceCode().strip();
+            Optional<List<Symbol>> varAndParamSymbolsWithinRange =
+                    getVarAndParamSymbolsWithinRangeForExprs(extractableNode.lineRange(), context);
+            Optional<ArgListsHolder> argListsHolder = getArgLists(context, 
+                    varAndParamSymbolsWithinRange.get(), extractableNode);
+            textEditMap.put(key,
+                    getTextEdits(context, extractableNode, newLineAtEnd,
+                            tSymbol.get(),
+                            argListsHolder.get().extractFunctionArgs,
+                            argListsHolder.get().replaceFunctionCallArgs, functionInsertRange));
+            renamePositionMap.put(key, PositionUtil.toRange(extractableNode.lineRange()).getStart());
+        });
+
+        if (lsClientCapabilities.getInitializationOptions().isPositionalRefactorRenameSupported()) {
+            return Collections.singletonList(CodeActionUtil.createCodeAction(CommandConstants.EXTRACT_TO_FUNCTION,
+                    new Command(NAME, CommandConstants.EXTRACT_COMMAND,
+                            List.of(NAME, context.filePath().toString(), textEditMap, renamePositionMap)),
+                    CodeActionKind.RefactorExtract));
         }
 
-        Optional<ArgListsHolder> argLists = getArgLists(context, varAndParamSymbolsWithinRange.get(),
-                matchedCodeActionNode);
-
-        if (argLists.isEmpty()) {
-            return Collections.emptyList();
-        }
-
-        List<String> argsForExtractFunction = argLists.get().extractFunctionArgs;
-        List<String> argsForReplaceFunctionCall = argLists.get().replaceFunctionCallArgs;
-
-        String functionName = getFunctionName(context, matchedCodeActionNode);
-        String function = getFunction(context, matchedCodeActionNode, newLineAtEnd, typeSymbol.get(), functionName,
-                argsForExtractFunction);
-
-        String replaceFunctionCall = getReplaceFunctionCall(argsForReplaceFunctionCall, functionName, true);
-
-        TextEdit extractFunctionEdit = new TextEdit(functionInsertRange, function);
-        TextEdit replaceEdit = new TextEdit(PositionUtil.toRange(matchedCodeActionNode.lineRange()),
-                replaceFunctionCall);
-        CodeAction codeAction = CodeActionUtil.createCodeAction(CommandConstants.EXTRACT_TO_FUNCTION,
-                List.of(extractFunctionEdit, replaceEdit), context.fileUri(), CodeActionKind.RefactorExtract);
-        CodeActionUtil.addRenamePopup(context, codeAction, CommandConstants.RENAME_COMMAND_TITLE_FOR_FUNCTION,
-                replaceEdit.getRange().getStart());
-        return List.of(codeAction);
+        return Collections.singletonList(CodeActionUtil.createCodeAction(CommandConstants.EXTRACT_TO_FUNCTION,
+                new Command(NAME, CommandConstants.EXTRACT_COMMAND,
+                        List.of(NAME, context.filePath().toString(), textEditMap)), CodeActionKind.RefactorExtract));
     }
 
-    private String getFunctionName(CodeActionContext context, NonTerminalNode matchedNode) {
+    private String getFunctionName(CodeActionContext context, Node matchedNode) {
         Set<String> visibleSymbolNames = getVisibleSymbols(context,
                 PositionUtil.toPosition(matchedNode.lineRange().endLine())).stream()
                 .map(Symbol::getName)
@@ -401,6 +460,41 @@ public class ExtractToFunctionCodeAction implements RangeBasedCodeActionProvider
                 .collect(Collectors.toSet());
 
         return NameUtil.generateTypeName(EXTRACTED_PREFIX, visibleSymbolNames);
+    }
+
+    private List<NonTerminalNode> getPossibleExpressionNodes(NonTerminalNode node, ExpressionNodeValidator nodeValidator) {
+        // Identify the sub-expressions to be extracted
+        List<NonTerminalNode> nodeList = new ArrayList<>();
+        while (node != null && !isExtractableExpressionNode(node) && node.kind() != SyntaxKind.OBJECT_FIELD
+                && !nodeValidator.getInvalidNode()) {
+            nodeList.add(node);
+            node = node.parent();
+            node.accept(nodeValidator);
+        }
+        return nodeList;
+    }
+
+    private static boolean isExtractableExpressionNode(NonTerminalNode node) {
+        return node instanceof StatementNode || node instanceof ModuleMemberDeclarationNode;
+    }
+
+    private List<TextEdit> getTextEdits(CodeActionContext context,
+                                        Node matchedCodeActionNode,
+                                        boolean newLineAtEnd,
+                                        TypeSymbol typeSymbol,
+                                        List<String> argsForExtractFunction,
+                                        List<String> argsForReplaceFunctionCall,
+                                        Range functionInsertRange) {
+        String functionName = getFunctionName(context, matchedCodeActionNode);
+        String function = getFunction(context, matchedCodeActionNode, newLineAtEnd, typeSymbol, functionName,
+                argsForExtractFunction);
+
+        String replaceFunctionCall = getReplaceFunctionCall(argsForReplaceFunctionCall, functionName, true);
+
+        TextEdit extractFunctionEdit = new TextEdit(functionInsertRange, function);
+        TextEdit replaceEdit = new TextEdit(PositionUtil.toRange(matchedCodeActionNode.lineRange()),
+                replaceFunctionCall);
+        return List.of(extractFunctionEdit, replaceEdit);
     }
 
     /**
@@ -420,7 +514,7 @@ public class ExtractToFunctionCodeAction implements RangeBasedCodeActionProvider
         return isExpr ? funcCall : funcCall + CommonKeys.SEMI_COLON_SYMBOL_KEY;
     }
 
-    private String getFunction(CodeActionContext context, NonTerminalNode matchedNode, boolean newLineEnd,
+    private String getFunction(CodeActionContext context, Node matchedNode, boolean newLineEnd,
                                TypeSymbol typeSymbol, String functionName, List<String> args) {
         String returnsClause =
                 String.format("returns %s", FunctionGenerator.getReturnTypeAsString(context, typeSymbol.signature()));
@@ -446,6 +540,7 @@ public class ExtractToFunctionCodeAction implements RangeBasedCodeActionProvider
         List<Symbol> varAndParamSymbols =
                 getVisibleSymbols(context, PositionUtil.toPosition(matchedLineRange.endLine())).stream()
                         .filter(symbol -> symbol.kind() == SymbolKind.VARIABLE || symbol.kind() == SymbolKind.PARAMETER)
+                        .filter(symbol -> symbol.getLocation().get().lineRange().filePath().equals(matchedLineRange.filePath()))
                         .filter(symbol -> context.currentSemanticModel().get().references(symbol).stream()
                                 .anyMatch(location -> PositionUtil.isRangeWithinRange(PositionUtil
                                                 .getRangeFromLineRange(location.lineRange()),
@@ -565,6 +660,7 @@ public class ExtractToFunctionCodeAction implements RangeBasedCodeActionProvider
          *   5.1. with self keyword inside its expression
          *   5.2. as varRef() in assignment statement
          *   5.3. as lhsExpression() in compound assignment statement
+         * 6. a client declaration (module client declaration is covered inside unSupportedModuleLevelSyntaxKinds)
          **/
         return !unSupportedModuleLevelSyntaxKinds.contains(enclosingModulePartNode.kind())
                 && (nodeKind != SyntaxKind.MAPPING_CONSTRUCTOR || parentKind != SyntaxKind.TABLE_CONSTRUCTOR)
@@ -628,6 +724,73 @@ public class ExtractToFunctionCodeAction implements RangeBasedCodeActionProvider
 
         private List<String> extractFunctionArgs;
         private List<String> replaceFunctionCallArgs;
+    }
+
+    static class ExpressionNodeValidator extends NodeVisitor {
+
+        private boolean invalidNode = false;
+
+        @Override
+        public void visit(BinaryExpressionNode node) {
+            node.lhsExpr().accept(this);
+            node.rhsExpr().accept(this);
+        }
+
+        @Override
+        public void visit(BasicLiteralNode node) {
+        }
+
+        @Override
+        public void visit(UnaryExpressionNode node) {
+        }
+
+        @Override
+        public void visit(FieldAccessExpressionNode fieldAccessExpressionNode) {
+
+        }
+
+        @Override
+        public void visit(SimpleNameReferenceNode simpleNameReferenceNode) {
+        }
+
+        @Override
+        public void visit(FunctionCallExpressionNode functionCallExpressionNode) {
+
+        }
+
+        @Override
+        public void visit(OptionalFieldAccessExpressionNode optionalFieldAccessExpressionNode) {
+
+        }
+
+        @Override
+        public void visit(IndexedExpressionNode indexedExpressionNode) {
+
+        }
+
+        @Override
+        public void visit(TypeCastExpressionNode typeCastExpressionNode) {
+
+        }
+
+        @Override
+        public void visit(ImplicitNewExpressionNode implicitNewExpressionNode) {
+
+        }
+
+        @Override
+        public void visit(QualifiedNameReferenceNode qualifiedNameReferenceNode) {
+            
+        }
+
+        @Override
+        protected void visitSyntaxNode(Node node) {
+            invalidNode = true;
+        }
+
+        public Boolean getInvalidNode() {
+            return invalidNode;
+        }
     }
 
     static class ExtractToFunctionTypeFinder extends NodeVisitor {
